# Go-Compiler

./: CMakeLists.txt  README.md
ast/astNodes/: ASTNode.cpp  ASTNode.h  Program.h  Statement.h
ast/expressions/: BinaryExpr.h  BooleanLiteral.h  Expression.h  FieldExpr.h  FunctionCallExpr.h  IntegerLiteral.h  NewExpr.h  NilExpr.h  UnaryExpr.h  VariableExpr.h
ast/statements/: AssignStmt.h  BlockStmt.h  DeleteStmt.h  ForStmt.h  IfStmt.h  InvocationStmt.h  PrintStmt.h  ReturnStmt.h  ScanStmt.h
ast/topLevelNodes/: Function.h  TopLevelNode.h  TypeDecl.h  VarDecl.h
benchmarks/Twiddleedee/: Twiddleedee.golite  output
benchmarks/bad/: bad1.golite  bad2.golite
benchmarks/binarytree/: binarytree.golite  input  output
benchmarks/hard/: hard.golite
benchmarks/linkedlist/: linkedlist.golite
benchmarks/mixed/: input  mixed.golite  output
benchmarks/powmod/: input  output  powmod.golite
benchmarks/primes/: primes.golite
benchmarks/primes2/: output  primes2.golite
benchmarks/sa/sa1/: expected  sa1.golite
benchmarks/sa/sa10/: sa10.golite  sa10_expected
benchmarks/sa/sa11/: sa11.golite  sa11_expected
benchmarks/sa/sa13/: sa13.golite  sa13_expected
benchmarks/sa/sa14/: sa14.golite  sa14_expected
benchmarks/sa/sa15/: sa15.golite  sa15_expected
benchmarks/sa/sa2/: expected  sa2.golite
benchmarks/sa/sa3/: expected  sa3.golite
benchmarks/sa/sa4/: expected  sa4.golite
benchmarks/sa/sa5/: sa5_2.golite  sa5_3.golite  sa5_4.golite  sa5_expected_2  sa5_expected_3  sa5_expected_4
benchmarks/sa/sa6/: sa6.golite  sa6_expected
benchmarks/sa/sa7/: sa7.golite  sa7_expected
benchmarks/sa/sa8/: sa8.golite  sa8_expected
benchmarks/sa/sa9/: sa9.golite  sa9_expected
benchmarks/simple/: simple1.golite  simple2.golite
benchmarks/thermopylae/: input  thermopylae.golite
cfg/: CFG.cpp  CFG.h
codegen/: codegen.cpp  codegen.h
golite/: main.cpp
grammars/: GoliteLexer.g4  GoliteParser.g4  generate.sh
lexer/: GoliteLexer.cpp  GoliteLexer.h  GoliteLexer.interp  lexer.cpp  lexer.h
lexer/grammars/: GoliteLexer.cpp  GoliteLexer.h  GoliteLexer.interp
llvm/: LLVM.cpp  LLVM.h
parser/: ASTBuilderVisitor.cpp  ASTBuilderVisitor.h  GoliteParser.cpp  GoliteParser.h  GoliteParser.interp  GoliteParser.tokens  GoliteParserBaseListener.cpp  GoliteParserBaseListener.h  GoliteParserBaseVisitor.cpp  GoliteParserBaseVisitor.h  GoliteParserListener.cpp  GoliteParserListener.h  GoliteParserVisitor.cpp  GoliteParserVisitor.h  parser.cpp  parser.h
symboltable/: symboltable.h
types/: types.cpp  types.h
utilities/: context.h
